app/assets/stylesheets/main.scss
@import './favourites';
@import './comments';
@import './sessions';
@import './stories';
@import './users';
@import './footer';
@import './pages';

// trix
// Remove actiontext.scss for custom styling
// @import "./actiontext.scss";
@import "./trix.scss";

@import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@400;500;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800&display=swap');


$primaryYellow: #FFC017;
$logoFont: 'Newsreader';
$secondaryFont: 'Inter';
$logoFontWeight: 100;
$highlight: linear-gradient(180deg, $primaryYellow 65%, white 65%);

h1, h2, h3, h4, h5, h6, p, a {
  font-family: $logoFont;
}

html, body {
  width: 100vw
}

header {
  background-color: $primaryYellow;
  margin: 0;
  padding-top: 5px;

  .main-header-container {
    display: flex;
    justify-content: space-between;
    padding: 1rem 0 0 2rem;

    .logo-tagline-container {
      display: flex;

      h1 {
        display: flex;
        flex-direction: column;
        justify-content: center;
        margin: 0 1em 1em 0;
        padding-top: 2px;
        transition: 3s;
      }

      h1 a:link {
        text-decoration: none;
        font-weight: $logoFontWeight;
        transition: 0.5s;
      }

      a.logo {
        color: black;
        font-size: xx-large;
        background: $highlight repeat-x 0 100%;
        background-size: 4px 40px;
        text-decoration: none;
        transition: background-size .2s;
      }

      a.logo:hover {
        background-size: 50px 100px;
        transition: 0.5s;
      }

      h2 {
        font-size: medium;
        margin-top: 1em;
      }
    }

    nav {
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin: 0 2rem 1.2em 0;
    }
  }
}


.header-nav-links.nav-links {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  width: 16rem;
  padding-top: 1em;

  a {
    color: black;
    font-size: larger;
    margin: 5px;
  }

  // Navigation links
  a:link {
    text-decoration: none;
    height: fit-content;

    // background: $highlight repeat-x 0 100%;
    background-size: 4px 20px;
    //text-decoration: none;
    //transition: background-size .2s;
    transition: 1s;
  }

  a:hover {
    background: $highlight;
    // background-size: 50px 60px;
    transition: 1s;
  }
}



.hero-container {
  .hero-line {
    background-color: black;
    height: 1px;
  }

  .hero-background {
    background-color: $primaryYellow;
    height: 40vh;
    margin: 0;

    .hero-wrapper {
      display: flex;
      flex-direction: row;
    }

    .hero-content {
      display: flex;
      flex-direction: column;

      h1 {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        margin-top: 0;
        margin-left: 6rem;
        padding-top: 5.5rem;
        margin-bottom: 0;
        padding-bottom: 0;
        font-size: xxx-large;
      }

      .hero-p {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        padding: 0 0 0 6rem;
        margin: 0;
        width: 45vw;
        font-size: larger;
      }

      .hero-btn {
        margin: 1rem 0 0 8rem;
      }
    }

    svg {
      height: 35vh;
      padding: 2rem 2rem 0.5rem 0.5rem;
      width: auto;
      margin: auto;
    }

  }
}

.btn {
  padding: 4px  6px 4px 6px;
  border: black solid 2px;
  border-radius: 25px;
  width: fit-content;
}

@media (max-width: 400px) {
  div.logo-tagline-container {
    display: flex;
    flex-direction: column;

    .tagline {
      display: none;
    }
  }

  .hero-container {
    height: 19vh;
    .hero-background {
      height: 19vh;
    }
  }

  .hero-background {

    h1 {
      display: flex;
      justify-content: center;
    }

    p {
      display: none;
    }
  }

  .section-heading {
    margin-bottom: 1.5em;
  }

  nav.topics {
    width: 90vw;
  }

  div.story-card#story-card {
    min-width: 20rem;
  }
}

.center {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

.margin-top-2 {
  margin-top: 2rem;
}

@media (max-width: 1660px) {
  input[type=file]#story_image {
    padding: 0.5vw 14.7vw 0.5vw 14.7vw;
  }
}

@media (max-width: 1440px) {
  input[type=file]#story_image {
    padding: 0.5vw 14.4vw 0.5vw 14.4vw;
  }
}

@media (max-width: 1380px) {
  h1#sign-up-heading {
    font-size: xx-large;
  }
}


@media (max-width: 1300px) {
  .box-shadow {
    margin: 6em 12em 3em 12em;
  }

  input[type=file]#story_image {
    // padding: 0.5vw 13.2vw 0.5vw 13.2vw;
  }
}

@media (max-width: 1175px) {
  input[type=file]#story_image {
    // padding: 0.5vw 12.5vw 0.5vw 12.5vw;
  }
}

@media (max-width: 1100px) {
  div.topics-container nav.topics {
    max-width: 80vw;
  }

  input[type=file]#story_image {
    width: 25vw;
    //padding: 0.5vw 5vw 0.5vw 5vw;
  }
}

@media (max-width: 751px) {
  .box-shadow {
    margin: 6em 6em 3em 6em;
  }

  input[type=file]#story_image {
    width: 35vw;
    padding: 0.5vw 5vw 0.5vw 5vw;
  }

  .hero-container {

    div.hero-content {
      h1#hero-tag {
        font-size: xx-large;
        margin-left: 4rem;
      }

      div#div-hero-p {
        padding-left: 4rem;
      }

      p#hero-tag-p {
        padding-left: 0;
      }
    }
  }

  div.topics-container nav.topics {
    max-width: 80vw;
  }

  div#story-card.story-card {
    max-width: 40rem;
    margin: 0 1em 1em 1em;
  }
}

.footer-tag {
  display: flex;
  flex-direction: row;
  justify-content: center;
}

@media (max-width: 1000px) {
  nav.footer-nav {
    a {
      margin: 0 0.5em 0 0.5em;
    }
  }
}

@media (max-width: 560px) {
  h1#sign-up-heading {
    font-size: x-large;
  }

  .user-form {
    width: 100%;
  }
}

@media (max-width: 465px) {
  h1#sign-up-heading {
    font-size: larger;
    display: flex;
    flex-direction: column;

    .right-word {
      margin: 0;
      width: fit-content;
    }
  }
}

@media (max-width: 350px) {
  nav.footer-nav {
    flex-wrap: wrap;
    a {
      margin: 0.5em 0 0.5em 0;
    }
  }
}

